# Vendamais

./: .gitignore  AGENT.md  ALTERACOES.md  ARCHITECTURE.md  ATUALIZACAO_CLIENTE_PDV.md  CONTRIBUTING.md  README.md  popular_db.py  pyproject.toml
data/: .gitkeep
vendamais/: database.py  main.py  models.py  styles.css
vendamais/views/: clientes_view.py  configuracoes_view.py  main_window.py  produtos_view.py  relatorios_view.py  vendas_view.py
